# anonize

./: CMakeLists.txt
anonize2/: CMakeLists.txt
src/: anontest.py
